[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geochat-kernel"
version = "1.0.0"
description = "Enterprise Orchestration Engine for GeoChat Spatial AI"
readme = "README.md"
authors = [
    { name = "Araz Shahkarami", email = "araz.shah@gmail.com" }
]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: GIS"
]
dependencies = [
    "geochat-sdk==1.0.0",       # وابستگی مستقیم هسته به پکیج SDK
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "networkx>=3.0",
    "httpx>=0.24.0",
    "jinja2>=3.0.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["geochat_kernel*"]